--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   geolocator: ^10.1.0
   http: ^0.13.6
   flutter_spinkit: ^5.2.0
+  intl: ^0.18.1
+
 
 dev_dependencies:
   flutter_test:
