--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
+    - icons/
     - images/
 
   # To add assets to your application, add an assets section, like this:
