--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     package="com.leopel.clima_flutter">
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
    <application
-        android:label="clima_flutter"
+        android:label="Clima"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
